# Virtual-Gardener

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.cpp_bot  Dockerfile.py  EfficientNet.Dockerfile  README.md  YOLO11.Dockerfile  YOLOV11.Dockerfile  YOLOV8.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  server.py  vcpkg-configuration.json  vcpkg.json
AImodel/: .gitignore  example.py  pyproject.toml  requirements1.txt  requirements2.txt
AImodel/model/: env_loader.py  gardener_model.py
cpp_bot/: CMakeLists.txt  CMakeUserPresets.json  main.cpp
metric_analysis/: calc_metrics.py  labels_tags.json
model/: Dockerfile  alpha_model.ipynb  continue_train.py  debug_model.ipynb  env_loader.py  gardener_model.py  labels_tags.json  pre-alpha_model.py  prepare_dataset.py  train-config.toml  train_eff_net.py  train_model.py  train_vit.py  train_yolo08.py  train_yolo11.py  venv.env
model/YOLO_files/trained_models/v0.1/: best.pt
model/vision_transformer/: utils.py
py_server/: requirements.txt  server.py
