[project]
name = "virtual-gardener"
version = "0.4.0"
description = "Service for detecting houseplants illnesses"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.1.0",
  "ultralytics>=8.3.107",
	"onnx>=1.12.0,<1.18.0",
	"onnxslim>=0.1.53",
	"onnxruntime-gpu"
]

[dependency-groups]
train = [
  "tensorboard",
  "scikit-image",
  "torch-tensorrt"
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]